changed buttons and border colour to the new colour. added same login nav button as on desktop website. added 20px margin to all the pages on mobile website. added destination and star on the about-package page with api resolved the destination suggestion modal added resort and itinerary values on about-package page. updated footer updated banner time to 15 sec added destination and star api on admin side tooadded search result modal list in mobile

--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,8 @@ body {
 }
 
 #google_login_button {
-	background: green;
+	/*  */
+	display: none;
 }
 
 #facts_video {
